// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverTwo renders 1`] = `
<div
  className="box"
>
  <div
    className="customClass"
  />
</div>
`;

exports[`PopoverTwo renders an accessibility label 1`] = `
<div
  aria-label="Test Accessibility Label"
  className="box"
>
  <div
    className="customClass"
  />
</div>
`;
